adicionando footer + novos operadores

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -257,3 +257,13 @@ button:focus::after {
     opacity: 1;
   }
 }
+footer {
+  color: #bb86fc;
+  font-size: 12px;
+  margin-top: 20px;
+}
+
+footer a {
+  color: #fefefe;
+  text-decoration: none;
+}
