--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -202,3 +202,12 @@ button {
     opacity: 1;
   }
 }
+footer{
+  color: #bb86fc;
+  font-size: 12px;
+  margin-top: 20px;
+}
+footer a{
+  color: #fefefe;
+  text-decoration: none;
+}
